tests/expected_invalid_field_access_private.diag.out
<input>:10:9: error: field 'y' is private
            r.y
            ^^^
